# letmemanage

./: .gitignore  Cargo.toml
docs/: Software Design Specification Build Roadmap Project LetMeManage.txt  Technical Specification Project LetMeGo.txt  Technical Specification ProjectLetMeManage.txt
letmego-core/: Cargo.toml
letmego-core/src/: config.rs  crypto.rs  error.rs  lib.rs  network.rs
letmego-satellite/: package-lock.json  package.json  vite.config.ts
letmego-satellite/src/: App.tsx  index.css  main.tsx
letmego-satellite/src-tauri/: Cargo.toml  tauri.conf.json
letmego-satellite/src-tauri/src/: lib.rs  main.rs
letmestay-anchor/: index.html  package-lock.json  package.json  vite.config.ts
letmestay-anchor/src/: App.tsx
letmestay-anchor/src-tauri/: Cargo.toml  tauri.conf.json
letmestay-anchor/src-tauri/src/: lib.rs  main.rs
