[workspace]
members = [
    "letmego-core",
    "letmestay-anchor/src-tauri",
    "letmego-satellite/src-tauri",
]
resolver = "2"

[workspace.dependencies]
# Crypto
ed25519-dalek = "2.1"
rand = "0.8"
base64ct = { version = "1.6", features = ["std"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
toml = "0.8"
directories = "5.0"

# Networking
tokio = { version = "1.49", features = ["full"] }

# Tauri
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-build = { version = "2.0.0", features = [] }
tauri-plugin-opener = "2.0.0"