[package]
name = "letmego-satellite"
version = "0.1.0"
description = "LetMeGo - The Satellite Client"
authors = ["you"]
edition = "2021"

# Same fix here
[lib]
name = "letmego_satellite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
letmego-core = { path = "../../letmego-core" }